--- a/Monopoly/Monopoly.csproj
+++ b/Monopoly/Monopoly.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="Cell.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Dice.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="startingForm.cs">
